--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "illuminate/html": "~5.0",
-        "khill/lavacharts" : "3.0.*"
+        "khill/lavacharts" : "3.0.*",
+        "mpociot/laravel-apidoc-generator": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
