--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "illuminate/html": "~5.0",
         "khill/lavacharts" : "3.0.*",
         "mpociot/laravel-apidoc-generator": "^1.5",
-        "unisharp/laravel-filemanager": "^1.5"
+        "unisharp/laravel-filemanager": "^1.5",
+        "laravelcollective/html": "5.2.*",
+        "windwalker/structure": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
