--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,4 +17,5 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    php_value date.timezone asia/shanghai
 </IfModule>
