--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "unisharp/laravel-filemanager": "^1.5",
         "laravelcollective/html": "5.2.*",
         "windwalker/structure": "^3.0",
-        "mews/captcha": "^2.1"
+        "mews/captcha": "^2.1",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
