--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "5.2.*",
         "windwalker/structure": "^3.0",
         "mews/captcha": "^2.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "moell/laravel-rss": "1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
