--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "windwalker/structure": "^3.0",
         "mews/captcha": "^2.1",
         "doctrine/dbal": "^2.5",
-        "moell/laravel-rss": "1.*"
+        "moell/laravel-rss": "1.*",
+        "php-ffmpeg/php-ffmpeg": "^0.6.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
