title max 30 to 35

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Homestead.json
 /config/database.php
 /laradock
 /public/apps/TopAuto.apk
+/public/vendor/FFMpeg
+/bower_components
+/public/videos
