--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /vendor
-!/vendor/unisharp
 /node_modules
 /public/storage
 /public/photos/*
@@ -9,7 +8,7 @@ Homestead.json
 .idea
 /config/database.php
 /laradock
-/public/apps/TopAuto.apk
+/public/apps
 /public/vendor/FFMpeg
 /bower_components
 /public/videos
